# fastcrypto

./: .gitignore  .gitmodules  CITATION.cff  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  crates.js  deny.toml  help.html  index.html  public-api.txt  search-index.js  settings.html  source-files.js
cryptotool/: Cargo.toml
cryptotool/src/: ecvrf.rs
fastcrypto/: Cargo.toml  all.html  constant.DIGEST_LEN.html  fn.blake2b_256.html  fn.generate_keypair.html  fn.generate_production_keypair.html  index.html  sidebar-items.js  struct.Digest.html  struct.SignatureService.html  trait.Hash.html  trait.Verifier.html
fastcrypto-classgroup/: Cargo.toml
fastcrypto-classgroup/src/: lib.rs
fastcrypto-cli/: Cargo.toml  README.md
fastcrypto-cli/src/: ecvrf.rs  encode_cli.rs  english_8192.json  lib.rs  mnemonics_cli.rs  sigs_cli.rs  tlock.rs  vdf.rs
fastcrypto-cli/tests/: ecvrf.rs  encode_cli.rs  sigs_cli.rs
fastcrypto-data/: Cargo.toml  README.md
fastcrypto-data/src/: lib.rs  merkle_tree.rs
fastcrypto-derive/: Cargo.toml
fastcrypto-derive/src/: lib.rs
fastcrypto-derive/tests/: newtype.rs
fastcrypto-pq/: Cargo.toml  PROVENANCE.md  build.rs
fastcrypto-pq/src/: abi_check.c  lib.rs  sys.rs
fastcrypto-proving/: Cargo.toml
fastcrypto-proving/benches/: proving.rs
fastcrypto-tbls/: Cargo.toml  README.md
fastcrypto-tbls/benches/: avss.rs  batch_avss.rs  batch_avss_avid.rs  dkg.rs  nidkg.rs  polynomial.rs  rvss.rs  tbls.rs
fastcrypto-tbls/src/: batched_avss.rs  dkg.rs  dkg_v0.rs  dkg_v1.rs  dl_verification.rs  ecies.rs  ecies_v0.rs  ecies_v1.rs  fake_tbls_key_generator.rs  fast_mult.rs  lib.rs  mocked_dkg.rs  nidkg.rs  nizk.rs  nodes.rs  polynomial.rs  random_oracle.rs  rvss.rs  tbls.rs  types.rs  weight_reduction_checks.rs
fastcrypto-tbls/tests/: super_swiper_test.rs
fastcrypto-vdf/: Cargo.toml  README.md
fastcrypto-vdf/benches/: class_group.rs  math.rs  vdf.rs  vdf_rsa.rs
fastcrypto-vdf/src/: bigint.rs  bigint_utils.rs  extended_gcd.rs  hash_prime.rs  lib.rs
fastcrypto-zkp/: Cargo.toml
fastcrypto-zkp/benches/: conversions.rs  poseidon.rs  proving.rs  utils.rs  zklogin.rs
fastcrypto-zkp/examples/: blake2s_demo.rs  circom_demo.rs
fastcrypto-zkp/proptest-regressions/: conversions.txt
fastcrypto-zkp/src/: README.md  api.rs  circom.rs  conversions.rs  dummy_circuit.rs  dummy_circuits.rs  lib.rs  verifier.rs  zk_login_utils.rs
fastcrypto/aes/: index.html  sidebar-items.js  struct.AesCbc.html  struct.AesCtr.html  struct.AesGcm.html  struct.GenericByteArray.html  type.Aes128CbcAnsiX923.html  type.Aes128CbcIso10126.html  type.Aes128CbcPkcs7.html  type.Aes128Ctr.html  type.Aes128Gcm.html  type.Aes192Ctr.html  type.Aes256CbcAnsiX923.html  type.Aes256CbcIso10126.html  type.Aes256CbcPkcs7.html  type.Aes256Ctr.html  type.Aes256Gcm.html  type.AesKey.html  type.InitializationVector.html
fastcrypto/benches/: bulletproofs.rs  crypto.rs  ecvrf_ristretto.rs  encoding.rs  groups.rs  hash.rs  merkle.rs  mskr.rs  nizk.rs  p256.rs  secp384r1.rs  serialize.rs  slh_dsa.rs  vdf.rs  vrf.rs  winternitz_ots.rs
fastcrypto/bls12377/: constant.CELO_BLS_PRIVATE_KEY_LENGTH.html  constant.CELO_BLS_PUBLIC_KEY_LENGTH.html  constant.CELO_BLS_SIGNATURE_LENGTH.html  index.html  sidebar-items.js  struct.BLS12377AggregateSignature.html  struct.BLS12377KeyPair.html  struct.BLS12377PrivateKey.html  struct.BLS12377PublicKey.html  struct.BLS12377Signature.html  type.BLS12377PublicKeyBytes.html
fastcrypto/bls12381/: constant.BLS_G1_LENGTH.html  constant.BLS_G2_LENGTH.html  constant.BLS_PRIVATE_KEY_LENGTH.html  constant.BLS_PUBLIC_KEY_LENGTH.html  constant.BLS_SIGNATURE_LENGTH.html  constant.DST.html  index.html  sidebar-items.js  struct.BLS12381AggregateSignature.html  struct.BLS12381KeyPair.html  struct.BLS12381PrivateKey.html  struct.BLS12381PublicKey.html  struct.BLS12381Signature.html  type.BLS12381PublicKeyBytes.html
fastcrypto/bulletproofs/: index.html  struct.BulletproofsRangeProof.html  struct.PedersenCommitment.html
fastcrypto/ed25519/: constant.ED25519_PRIVATE_KEY_LENGTH.html  constant.ED25519_PUBLIC_KEY_LENGTH.html  constant.ED25519_SIGNATURE_LENGTH.html  index.html  sidebar-items.js  struct.Ed25519AggregateSignature.html  struct.Ed25519KeyPair.html  struct.Ed25519PrivateKey.html  struct.Ed25519PublicKey.html  struct.Ed25519Signature.html  type.Ed25519PublicKeyBytes.html
fastcrypto/encoding/: fn.decode_bytes_hex.html  fn.encode_bytes_hex.html  index.html  struct.Base64.html  struct.Hex.html  trait.Encoding.html
fastcrypto/error/: enum.FastCryptoError.html  index.html  sidebar-items.js
fastcrypto/hash/: index.html  sidebar-items.js  struct.Blake2b.html  struct.Blake3.html  struct.Digest.html  struct.HashFunctionWrapper.html  trait.Hash.html  trait.HashFunction.html  trait.Hashable.html  trait.ReverseWrapper.html  type.Blake2b.html  type.Blake2b256.html  type.Keccak256.html  type.Sha256.html  type.Sha3_256.html  type.Sha512.html
fastcrypto/hkdf/: fn.hkdf_generate_from_ikm.html  index.html  sidebar-items.js
fastcrypto/hmac/: fn.hkdf.html  fn.hkdf_generate_from_ikm.html  fn.hkdf_sha3_256.html  fn.hmac.html  fn.hmac_sha3_256.html  index.html  sidebar-items.js  type.HkdfIkm.html  type.HmacKey.html
fastcrypto/private_seed/: index.html  sidebar-items.js  struct.PrivateSeed.html
fastcrypto/pubkey_bytes/: index.html  sidebar-items.js  struct.PublicKeyBytes.html
fastcrypto/secp256k1/: constant.RECOVERABLE_SIGNATURE_SIZE.html  index.html  sidebar-items.js  static.SECP256K1.html  struct.Secp256k1KeyPair.html  struct.Secp256k1PrivateKey.html  struct.Secp256k1PublicKey.html  struct.Secp256k1Signature.html  type.Secp256k1PublicKeyBytes.html
fastcrypto/serde_helpers/: fn.keypair_decode_base64.html  index.html  sidebar-items.js  struct.BlsSignature.html  struct.Ed25519Signature.html
fastcrypto/src/: aes.rs  base64_representation.rs  bls12377.rs  bls12381.rs  bulletproofs.rs  bytes_representation.rs  ed25519.rs  encoding.rs  error.rs  fake_tbls_key_generator.rs  hash.rs  hmac.rs  intent.rs  jwt_utils.rs  lib.rs  merkle.rs  mskr.rs  mysten_infra_impl.rs  nizk.rs  (+17 more)
(+16084 files in other folders)
