[package]
name = "fastcrypto"
version = "2.0.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = ["crates-io"]
description = "Common cryptographic library used at Mysten Labs"
repository = "https://github.com/MystenLabs/fastcrypto"

[dependencies]
ark-bls12-377 = { version = "0.3.0", features = ["std"], optional = true }
base64ct = { version = "1.5.2", features = ["alloc"] }
ed25519-consensus = { version = "2.0.1", features = ["serde"] }
eyre = "0.6.8"
hex = "0.4.3"
hkdf = { version = "0.12.3", features = ["std"] }
rand = { version = "0.8.5", features = ["std"] }
rust_secp256k1 = { version = "0.24.0", package = "secp256k1", features = ["recovery", "rand-std", "bitcoin_hashes", "global-context"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_bytes = "0.11.7"
serde_with = "2.0.1"
signature = { version = "1.6.1", features = ["rand-preview"] }
tokio = { version = "1.21.1", features = ["sync", "rt", "macros"] }
zeroize = "1.5.7"
bulletproofs = "4.0.0"
curve25519-dalek-ng = "4.1.1"
merlin = "3.0.0"
aes = "0.8.1"
ctr = "0.9.1"
cbc = { version = "0.1.2", features = ["std"] }
aes-gcm = "0.10.1"
generic-array = { version = "0.14.6", features = ["serde"] }
typenum = "1.15.0"

ark-ec = { version = "0.3.0", features = ["std"], optional = true }
ark-ff = { version = "0.3.0", features = ["std"], optional = true }
ark-serialize = { version = "0.3.0", features = ["std"], optional = true }
ark-std = { version = "0.3.0", features = ["std"], optional = true }
blake2 = "0.10"
blake3 = "1.3.1"
blst = "0.3.10"
digest = "0.10.5"
once_cell = "1.15.0"
readonly = "0.2.2"
sha2 = "0.10.6"
sha3 = "0.10.5"
thiserror = "1.0.36"

fastcrypto-derive = { path = "./fastcrypto-derive", version = "0.1.2" }

[[bench]]
name = "crypto"
harness = false

[features]
default = []
copy_key = []

[dev-dependencies]
bincode = "1.3.3"
criterion = "0.4.0"
hex-literal = "0.3.4"
k256 = { version = "0.11.5", features = ["ecdsa", "sha256", "keccak256"] }
proptest = "1.0.0"
proptest-derive = "0.3.0"
serde_json = "1.0.85"
serde-reflection = "0.3.6"
wycheproof = "0.4.0"
