[workspace]
resolver = "2"
members = [
    "fastcrypto",
    "fastcrypto-derive",
    "fastcrypto-tbls",
    "fastcrypto-zkp",
    "fastcrypto-cli",
    "fastcrypto-vdf"
]

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
rand = { version = "0.8.5", features = ["std"] }
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
typenum = "1.16.0"
zeroize = "1.5.7"
sha3 = "0.10.6"
digest = "0.10.6"
bcs = "0.1.4"
tracing = "0.1.37"
aes = "0.8.2"
aes-gcm = "0.10.1"
aes-gcm-siv = "0.11.1"
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-crypto-primitives = "0.4.0"
ark-ec = "0.4.1"
ark-ff = "0.4.1"
ark-groth16 = { version = "0.4.0", default-features = false }
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-secp256r1 = "0.4.0"
ark-serialize = "0.4.1"
ark-snark = "0.4.0"
ark-std = "0.4.0"
assert_cmd = "2.0.0"
auto_ops = "0.3.0"
base58 = "0.2.0"
base64 = "0.21.0"
base64ct = "1.5.3"
bech32 = "0.9.1"
blake2 = "0.10.6"
blst = "0.3.11"
bs58 = "0.4.0"
bulletproofs = "4.0.0"
byte-slice-cast = "1.2.2"
cbc = "0.1.2"
clap = "4.1.8"
criterion = "0.5.1"
ctr = "0.9.2"
curve25519-dalek-ng = "4.1.1"
derive_more = "0.99.16"
ecdsa = "0.16.6"
ed25519-consensus = "2.1.0"
elliptic-curve = "0.13.2"
exitcode = "1.1.2"
fastcrypto-derive = { version = "0.1.3", path = "fastcrypto-derive" }
fastcrypto-vdf = { path = "fastcrypto-vdf" }
faster-hex = "0.6.1"
ff = "0.13.0"
generic-array = "0.14.6"
generic-tests = "0.1.2"
getrandom = "0.2.15"
hex = "0.4.3"
hex-literal = "0.4.1"
hkdf = "0.12.3"
im = "15"
k256 = "0.11.6"
lazy_static = "1.4.0"
merlin = "3.0.0"
neptune = { version = "13.0.0", default-features = false }
num-bigint = { version = "0.4.4", default-features = false }
num-bigint-dig = "0.8.4"
num-integer = "0.1.45"
num-prime = "0.4.3"
num-traits = "0.2.16"
once_cell = "1.17.0"
p256 = "0.13.2"
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark.git", rev = "ff7f5e05d55667b4ffba129b837da780c4c5c849" }
proptest = "1.1.0"
quote = "1.0.23"
radix64 = "0.6.2"
rand_chacha = "0.3.1"
readonly = "0.2.3"
regex = "1.7.1"
reqwest = { version = "0.12", default-features = false }
rfc6979 = "0.4.0"
rsa = "0.8.2"
rust-base58 = "0.0.4"
rust_secp256k1 = "0.27.0"
rustc-hex = "2.1.0"
schemars = "0.8.12"
serde-big-array = "0.5.0"
serde-reflection = "0.3.6"
serde_json = "1.0.93"
serde_with = { version = "3", default-features = false }
sha2 = "0.10.6"
signature = "2.0.0"
static_assertions = "1.1.0"
syn = "1.0.107"
tap = "1.0.1"
test-strategy = "0.3.1"
thiserror = "1.0.38"
tokio = "1.24.1"
twox-hash = "1.6.3"
wycheproof = "0.5.0"
