[package]
name = "fastcrypto-cli"
version = "0.1.1"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = ["crates-io"]
description = "Command line tools for cryptographic functions"
repository = "https://github.com/MystenLabs/fastcrypto"

[dependencies]
clap = { workspace = true, features = ["derive"] }
fastcrypto = { path = "../fastcrypto", features = ["copy_key"] }
fastcrypto-vdf = { workspace = true, features = ["experimental"] }
hex = { workspace = true }
rand.workspace = true
exitcode = { workspace = true }
bcs.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
assert_cmd = { workspace = true }
regex = { workspace = true }

[[bin]]
name = "ecvrf-cli"
path = "src/ecvrf.rs"

[[bin]]
name = "encode-cli"
path = "src/encode_cli.rs"

[[bin]]
name = "sigs-cli"
path = "src/sigs_cli.rs"

[[bin]]
name = "vdf-cli"
path = "src/vdf.rs"

[[bin]]
name = "tlock-cli"
path = "src/tlock.rs"
