[package]
name = "fastcrypto-derive"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
readme = "../README.md"
description = "Collection of useful cryptographic macros"
repository = "https://github.com/MystenLabs/fastcrypto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.109", features = ["derive"] }
proc-macro2 = "1.0.51"
quote = "1.0.23"
convert_case = "0.6.0"
