[package]
name = "fastcrypto-derive"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
readme = "../README.md"
description = "Collection of useful cryptographic macros"
repository = "https://github.com/MystenLabs/fastcrypto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["derive"] }
quote = { workspace = true }
