[package]
name = "fastcrypto-tbls"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
readme = "README.md"
description = "Threshold BLS and DKG protocols"
repository = "https://github.com/MystenLabs/fastcrypto"

[dependencies]
fastcrypto = { path = "../fastcrypto", features = ["experimental"]}
fastcrypto-derive = { path = "../fastcrypto-derive" }

zeroize.workspace = true
rand.workspace = true
serde.workspace = true
bincode.workspace = true
typenum.workspace = true
sha3.workspace = true
digest.workspace = true

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "polynomial"
harness = false
required-features = ["experimental"]

[features]
default = []
experimental = []
