[package]
name = "fastcrypto-tbls"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
readme = "README.md"
description = "Threshold BLS and DKG protocols"
repository = "https://github.com/MystenLabs/fastcrypto"

[dependencies]
fastcrypto = { path = "../fastcrypto", features = ["aes"] }

rand.workspace = true
serde.workspace = true
typenum.workspace = true
sha3.workspace = true
digest.workspace = true
bcs.workspace = true
tracing.workspace = true
zeroize.workspace = true

itertools = "0.10.5"
hex = "0.4.3"
tap = { version = "1.0.1", features = [] }

[dev-dependencies]
criterion = "0.5.1"
generic-tests = "0.1.2"

[[bench]]
name = "polynomial"
harness = false

[[bench]]
name = "dkg"
harness = false

[[bench]]
name = "nidkg"
harness = false
required-features = ["experimental"]

[[bench]]
name = "tbls"
harness = false

[features]
default = []
experimental = []