[package]
name = "fastcrypto-vdf"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = ["crates-io"]
description = "Verifiable delay functions"
repository = "https://github.com/MystenLabs/fastcrypto"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastcrypto = { path = "../fastcrypto" }
num-bigint = { version = "0.4.4", features = ["serde", "rand"] }
num-traits = "0.2.16"
num-integer = "0.1.45"
num-prime = { version = "0.4.3", features = ["big-int"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde.workspace = true
bcs.workspace = true
lazy_static = "1.4.0"
rayon = "1.10.0"

[features]
experimental = []

[dev-dependencies]
hex = "0.4.3"
criterion = "0.5.1"
rand = "0.8.4"
num-bigint-dig = "0.8.4"

[[bench]]
name = "vdf"
harness = false
required-features = ["experimental"]

[[bench]]
name = "class_group"
harness = false
required-features = ["experimental"]

[[bench]]
name = "math"
harness = false
required-features = ["experimental"]
