[package]
name = "fastcrypto-vdf"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = ["crates-io"]
description = "Verifiable delay functions"
repository = "https://github.com/MystenLabs/fastcrypto"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastcrypto = { path = "../fastcrypto" }
num-bigint = { workspace = true, features = ["serde", "rand"] }
num-traits = { workspace = true }
num-integer = { workspace = true }
num-prime = { workspace = true, features = ["big-int"] }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde.workspace = true
bcs.workspace = true
lazy_static = { workspace = true }

[features]
experimental = []

[dev-dependencies]
hex = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
num-bigint-dig = { workspace = true }

[[bench]]
name = "vdf"
harness = false
required-features = ["experimental"]

[[bench]]
name = "class_group"
harness = false
required-features = ["experimental"]

[[bench]]
name = "math"
harness = false
required-features = ["experimental"]

[[bench]]
name = "vdf_rsa"
harness = false
required-features = ["experimental"]
