[package]
name = "fastcrypto-zkp"
version = "0.1.3"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = ["crates-io"]
description = "zk-proof library used at Mysten Labs"
repository = "https://github.com/MystenLabs/fastcrypto"

[[bench]]
name = "proving"
harness = false

[[bench]]
name = "zklogin"
harness = false

[[bench]]
name = "poseidon"
harness = false

[dependencies]
ark-bn254 = "0.4.0"
ark-ec = { version = "0.4.1" }
ark-ff = { version = "0.4.1", features = ["asm"] }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-relations = "0.4.0"
ark-serialize = "0.4.1"
ark-snark = "0.4.0"
bcs.workspace = true
byte-slice-cast = "1.2.2"
fastcrypto = { path = "../fastcrypto", version = "0.1.5" }
derive_more = "0.99.16"
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }
schemars = "0.8.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
once_cell = "1.16"
im = "15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
neptune = { version = "13.0.0", default-features = false }
ff = { version = "0.13.0", features = ["derive"] }
typenum = "1.13.0"
lazy_static = "1.4.0"
itertools = "0.12.0"
regex = "1.7.1"

[dev-dependencies]
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs", "prf"] }
ark-r1cs-std = "0.4.0"
ark-std = "0.4.0"
blake2 = "0.10.6"
criterion = "0.5.1"
hex = "0.4.3"
test-strategy = "0.3.1"
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark.git", rev = "ff7f5e05d55667b4ffba129b837da780c4c5c849" }
tokio = { version = "1.24.1", features = ["sync", "rt", "macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
proptest = "1.1.0"

[features]
e2e = []
