[package]
name = "fastcrypto-zkp"
version = "0.1.3"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = ["crates-io"]
description = "zk-proof library used at Mysten Labs"
repository = "https://github.com/MystenLabs/fastcrypto"

[[bench]]
name = "proving"
harness = false

[[bench]]
name = "zklogin"
harness = false

[[bench]]
name = "poseidon"
harness = false

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true, features = ["asm"] }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-snark = { workspace = true }
bcs.workspace = true
byte-slice-cast = { workspace = true }
fastcrypto = { path = "../fastcrypto", version = "0.1.5" }
derive_more = { workspace = true }
num-bigint = { workspace = true, features = ["rand"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
once_cell = { workspace = true }
im = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
neptune = { workspace = true }
ff = { workspace = true, features = ["derive"] }
typenum = { workspace = true }
lazy_static = { workspace = true }
itertools = "0.12.0"
regex = { workspace = true }

[dev-dependencies]
ark-bls12-377 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-crypto-primitives = { workspace = true, features = ["r1cs", "prf"] }
ark-r1cs-std = { workspace = true }
ark-std = { workspace = true }
blake2 = { workspace = true }
criterion = { workspace = true }
hex = { workspace = true }
test-strategy = { workspace = true }
poseidon-ark = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "rt-multi-thread"] }
lazy_static = { workspace = true }
proptest = { workspace = true }

[features]
e2e = []
