[package]
name = "solver"
version = "0.1.0"
edition = "2024"

[lib]
path = "super_swiper.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.13", features = ["derive"] }
crossbeam-channel = "0.5.13"
humantime = "2.2.0"
mimalloc = "0.1.43"
num-rational = { version = "0.4.2", features = ["std"], default-features = false }

# Force ahash to a compatible version to avoid stdsimd feature issues with nightly
# This ensures all transitive dependencies use a compatible version
ahash = { version = "0.8.12", default-features = false }

[dev-dependencies]
proptest = "1.6.0"
test-case = "3.3.1"

[profile.release]
overflow-checks = true
# Enable to use perf.
#debug = 1

[profile.bench]
overflow-checks = true

[lints.rust]
missing-copy-implementations = "warn"
missing-debug-implementations = "warn"
non-ascii-idents = "forbid"
redundant-imports = "warn"
redundant-lifetimes = "warn"
unit-bindings = "warn"
unnameable-types = "warn"
unsafe_code = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
items_after_statements = "allow"
manual_midpoint = "allow"
missing-errors-doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
